[package]
name = "flight-sql-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-flight = { version = "45.0.0", features = ["flight-sql-experimental"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
tokio = "1.31.0"
tonic = "0.9.2"
