[package]
name = "flight-sql-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "45.0.0", default-features = false, features = ["ipc"] }
arrow-array = "45.0.0"
arrow-flight = { version = "45.0.0", features = ["flight-sql-experimental"] }
arrow-ipc = "45.0.0"
arrow-schema = "45.0.0"
base64 = "0.21.2"
env_logger = "0.10.0"
futures = "0.3.28"
once_cell = "1.18.0"
prost = "0.11.9"
tokio = "1.31.0"
tonic = "0.9.2"
